--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mysql": "^2.18.1",
     "request": "^2.88.2",
     "require": "^2.4.20",
+    "systeminformation": "^5.6.7",
     "tmi.js": "^1.7.1"
   }
 }
