--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "fs": "0.0.1-security",
+    "genius-lyrics-api": "^3.0.6",
     "got": "^11.8.1",
     "humanize-duration": "^3.25.1",
+    "lyricist": "^2.2.2",
     "mysql": "^2.18.1",
     "request": "^2.88.2",
     "require": "^2.4.20",
