--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "offlinebot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.3.4",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "fs": "0.0.1-security",
@@ -16,6 +17,7 @@
     "got": "^11.8.1",
     "humanize-duration": "^3.25.1",
     "lyricist": "^2.2.2",
+    "mocha": "^8.3.2",
     "mysql": "^2.18.1",
     "request": "^2.88.2",
     "require": "^2.4.20",
