--- a/configexample.json
+++ b/configexample.json
@@ -1,1 +1,1 @@
-{"options":{"debug":false},"connection":{"cluster":"aws","reconnect":true},"identity":{"username":"helltfbot","password":""},"channels":[]}
+{"options":{"debug":false},"connection":{"cluster":"aws","reconnect":true},"identity":{"username":"","password":""},"channels":[]}
