--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "offlinebot.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha test/**/**/*.js"
   },
   "author": "",
   "license": "ISC",
