--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "genius-lyrics-api": "^3.0.6",
     "got": "^11.8.1",
     "humanize-duration": "^3.25.1",
+    "lodash": "^4.17.21",
     "lyricist": "^2.2.2",
     "mocha": "^8.3.2",
     "mysql": "^2.18.1",
