--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.9.2",
     "chai": "^4.3.4",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
@@ -17,12 +18,15 @@
     "got": "^11.8.1",
     "humanize-duration": "^3.25.1",
     "lodash": "^4.17.21",
-    "lyricist": "^2.2.2",
-    "mocha": "^8.3.2",
+    "lyricist": "^0.1.2",
+    "mocha": "^9.2.0",
     "mysql": "^2.18.1",
     "request": "^2.88.2",
-    "require": "^2.4.20",
+    "require": "^0.4.4",
     "systeminformation": "^5.6.7",
     "tmi.js": "^1.7.1"
+  },
+  "devDependencies": {
+    "prisma": "^3.8.1"
   }
 }
